# chip8

./: CMakeLists.txt  resources.xml
res/: appwindow.xml
src/: app.c  app.h  appwindow.c  appwindow.h  console.c  console.h  cpu.c  cpu.h  display.c  display.h  emu.c  emu.h  keystate.c  keystate.h  main.c
